# pas-cloudmount

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
docs/: FIGMA-DESIGN-GUIDE.md  UI-DESIGN-SPEC.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cloud_provider/: mod.rs
src-tauri/src/mounter/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CloudCard.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  StatusBadge.tsx  index.ts
src/lib/: utils.ts
src/pages/: HomePage.tsx  SettingsPage.tsx
src/types/: index.ts
